<resources>
    <string name="app_name">AppMiyamovil</string>

    <string name="valbtnlogin">INICIAR SESIÓN</string>
    <string name="valbtnregistrar">REGISTRARME</string>
    <string name="valchkguardardatos">Recordar</string>
    <string name="msguspassword">Ingrese usuario y password</string>
    <string name="valbtnregistrarme">QUIERO REGISTRARME</string>
    <string name="valbtnirlogin">VOLVER A LOGIN</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valetusuario">Ingrese su usuario</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavpresent">INICIO</string>
    <string name="valnavpedidos">PEDIDOS</string>
    <string name="valnavconsultas">CONSULTAS</string>
    <string name="valpresent">Empresa dedicada al procesamiento y venta de materiales de construcción, vidrio, aluminio y productos para el sector automotriz.\n\nVisión: Estamos comprometidos a cumplir la regulación legal vigente y aplicable a la naturaleza propia de su negocio y crear un ambiente que propicie la mejora continua de nuestro Sistema de Gestión de Calidad.\n\nMisión: Satisfacer las necesidades de los clientes gestionando eficientemente nuestros recursos y procesos.</string>
    <string name="valtvcliente">FORMULARIO CLIENTE</string>
    <string name="valtvnombre">Nombre:</string>
    <string name="valtvapellidos">Apellidos:</string>
    <string name="valtvDNI">DNI:</string>
    <string name="valtvubicacion">Ubicación por GPS</string>
    <string name="valbtnsiguiente">Siguiente</string>
    <string name="valbtnatras">Atrás</string>
    <string name="valtvproductos">SELECCIÓN DE PRODUCTOS</string>
    <string name="valchbañadir">¿Añadir?</string>
    <string name="valconsulta">Consultas</string>
    <string name="valtvconsulta">Consulta:</string>
    <string name="valenviar">Enviar</string>
    <string name="valcantidad">Ingrese cantidad</string>
    <string name="valbtnverdetalle">Ver Detalle</string>
    <string name="valtvpedetalle">DETALLE DEL PEDIDO</string>
    <string name="valtvcliente2">CLIENTE</string>
    <string name="valproductos">PRODUCTOS</string>
    <string name="valcancelarpedido">Cancelar Pedido</string>
    <string name="valdirempresa">Encuéntranos: Av. Iquitos 1174, Lima 15033</string>
    <string name="valempnom" >Corporación Miyasato</string>
</resources>